--- a/views/style.css
+++ b/views/style.css
@@ -19,7 +19,7 @@
 
 /* content editable */
 
-*[contenteditable] { border-radius: 0.25em; min-width: 1em; outline: 0; }
+*[contenteditable] { border-radius: 0.25em; outline: 0; }
 
 *[contenteditable] { cursor: pointer; }
 
@@ -33,7 +33,7 @@ h1 { font: bold 100% sans-serif; letter-spacing: 0.5em; text-align: center; text
 
 /* table */
 
-table { font-size: 75%; table-layout: fixed; width: 100%; }
+table { font-size: 75%; table-layout: fixed; width: 100%;}
 table { border-collapse: separate; border-spacing: 2px; }
 th, td { border-width: 1px; padding: 0.5em; position: relative; text-align: left; }
 th, td { border-radius: 0.25em; border-style: solid; }
@@ -42,11 +42,11 @@ td { border-color: #DDD; }
 
 /* page */
 
-html { font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; }
+html { font: 32px/1 'Open Sans', sans-serif; padding-top: 100px; }
 html { background: #999; cursor: default; }
 
-body { box-sizing: border-box; height: 11in; margin: 0 auto; overflow: hidden; padding: 0.5in; width: 8.5in; }
-body { background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
+body { box-sizing: border-box;  padding: 0.5in; width: 100%; }
+body { background: #FFF; border-radius: 8px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
 
 /* header */
 
